--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79c292">  <td>20/01/29 18:30:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WomenShoesTest.openEthnicSandals()[pri:2, instance:com.amazon.qa.testcases.WomenShoesTest@5ad851c9]">openEthnicSandals</td> 
-  <td>main@2129221032</td>   <td></td> </tr>
-<tr bgcolor="79c292">  <td>20/01/29 18:30:10</td>   <td>-15341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WomenShoesTest.openFashionSandals()[pri:1, instance:com.amazon.qa.testcases.WomenShoesTest@5ad851c9]">openFashionSandals</td> 
-  <td>main@2129221032</td>   <td></td> </tr>
-<tr bgcolor="79c292">  <td>20/01/29 18:29:58</td>   <td>-27667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WomenShoesTest.setup()[pri:0, instance:com.amazon.qa.testcases.WomenShoesTest@5ad851c9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2129221032</td>   <td></td> </tr>
-<tr bgcolor="79c292">  <td>20/01/29 18:30:14</td>   <td>-11928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WomenShoesTest.setup()[pri:0, instance:com.amazon.qa.testcases.WomenShoesTest@5ad851c9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2129221032</td>   <td></td> </tr>
+<tr bgcolor="8675e1">  <td>20/02/11 22:04:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.SearchWomenFashionTest()[pri:0, instance:com.amazon.qa.testcases.HomePageTest@d83da2e]">SearchWomenFashionTest</td> 
+  <td>main@517052730</td>   <td></td> </tr>
+<tr bgcolor="8675e1">  <td>20/02/11 22:04:19</td>   <td>-4813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.amazon.qa.testcases.HomePageTest@d83da2e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@517052730</td>   <td></td> </tr>
+<tr bgcolor="8675e1">  <td>20/02/11 22:04:37</td>   <td>12237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearoff()[pri:0, instance:com.amazon.qa.testcases.HomePageTest@d83da2e]">&lt;&lt;tearoff</td> 
+<td>&nbsp;</td>  <td>main@517052730</td>   <td></td> </tr>
 </table>
