--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.amazon.qa.testcases.WomenShoesTest" class="method navigator-link" hash-for-method="openEthnicSandals">openEthnicSandals</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.amazon.qa.testcases.WomenShoesTest" class="method navigator-link" hash-for-method="openFashionSandals">openFashionSandals</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.amazon.qa.testcases.HomePageTest" class="method navigator-link" hash-for-method="SearchWomenFashionTest">SearchWomenFashionTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.amazon.qa.testcases.WomenShoesTest</span>
+              <span class="class-name">com.amazon.qa.testcases.HomePageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="openEthnicSandals">
-                  </a> <!-- openEthnicSandals -->
-                  <span class="method-name">openEthnicSandals</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="openFashionSandals">
-                  </a> <!-- openFashionSandals -->
-                  <span class="method-name">openFashionSandals</span>
+                  <a name="SearchWomenFashionTest">
+                  </a> <!-- SearchWomenFashionTest -->
+                  <span class="method-name">SearchWomenFashionTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse-1226308772/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse--343962605/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.amazon.qa.testcases.WomenShoesTest&quot;/&gt;
+      &lt;class name=&quot;com.amazon.qa.testcases.HomePageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'openFashionSandals')
-data.setCell(0, 2, 'com.amazon.qa.testcases.WomenShoesTest')
-data.setCell(0, 3, 3399);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'openEthnicSandals')
-data.setCell(1, 2, 'com.amazon.qa.testcases.WomenShoesTest')
-data.setCell(1, 3, 765);
+data.setCell(0, 1, 'SearchWomenFashionTest')
+data.setCell(0, 2, 'com.amazon.qa.testcases.HomePageTest')
+data.setCell(0, 3, 12233);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,23 +219,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.amazon.qa.testcases.WomenShoesTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.amazon.qa.testcases.HomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">openFashionSandals</span>
-                <span class="method-start">12331 ms</span>
+                <span class="method-name">SearchWomenFashionTest</span>
+                <span class="method-start">4815 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">15743 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">openEthnicSandals</span>
-                <span class="method-start">27672 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearoff</span>
+                <span class="method-start">17052 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
